syntax = "proto3";

package bancada;

// Servi√ßos
service BancadaService {
  rpc EnviarDados(Vazio) returns (DadoSensor);
}

// Mensagens
message Vazio {};

message DadoSensor {
  string bancada_id = 1;
  double temperatura = 2;
  double umidade = 3;
  double condutividade = 4;
  string timestamp = 5;
}